# parallel-architectures-course

./: .gitignore  LICENSE  README.md
homework_2/: CMakeLists.txt  common.h  input2.txt  q1.c  q2.c  q3.c  report.docx  report.txt
homework_3/: build.sh  gen_input.py  input1.txt  input2.txt  input3.txt  main.c  par_main.cu  par_main2.cu  report.docx  results.xlsx  run.sh
